[package]
name = "clap-repl"
description = "Build nice REPLs using clap and rustyline with zero effort"
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/HKalbasi/clap-repl"
repository = "https://github.com/HKalbasi/clap-repl"
documentation = "https://docs.rs/clap-repl"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clap_repl"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
console = "0.15.7"
rustyline = "12.0.0"
shlex = "1.2.0"

[dev-dependencies]
redis = "0.23.0"
