[package]
name = "clap-repl"
description = "Build nice REPLs using clap and reedline with zero effort"
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/HKalbasi/clap-repl"
repository = "https://github.com/HKalbasi/clap-repl"
documentation = "https://docs.rs/clap-repl"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clap_repl"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = { version = "=4.5.16", features = ["unstable-dynamic", "unstable-command"] }
console = "0.15.7"
nu-ansi-term = "0.50.0"
reedline = "0.32.0"
shlex = "1.3.0"

[dev-dependencies]
redis = "0.27.4"
