[package]
name = "clap-repl"
description = "Build nice REPLs using clap and reedline with zero effort"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/HKalbasi/clap-repl"
repository = "https://github.com/HKalbasi/clap-repl"
documentation = "https://docs.rs/clap-repl"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clap_repl"
path = "src/lib.rs"

[features]
default = []
async = []

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = { version = "=4.5.16", features = ["unstable-dynamic", "unstable-command"] }
console = "0.15.11"
nu-ansi-term = "0.50.1"
reedline = "0.39.0"
shlex = "1.3.0"

[dev-dependencies]
redis = "0.30.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "async"
required-features = ["async"]
